# rummage

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
src/: cli.rs  config.rs  lib.rs  main.rs  matches.rs  workspace.rs
