[package]
name = "rummage"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]


[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["cargo", "derive"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
config = "0.13"
crossterm = "0.27.0"
enum_dispatch = "0.3.13"
jwalk = "0.8.1"
libc = "0.2"
nucleo = "0.5.0"
schemars = "0.8.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
shellexpand = "3"
xdg = "2.4"

[dev-dependencies]
serial_test = "3"

